style: fix logo

--- a/fastapi/app/templates/login.html
+++ b/fastapi/app/templates/login.html
@@ -228,7 +228,7 @@
 
 <body>
     <div class="top-logo">
-        <img src="https://podly.fun/chatbot/logo?theme=light" alt="logo">
+        <img src="/static/img/podly_banner_white.png" alt="logo">
     </div>
     <div class="container">
         <div class="left-panel">
